test/syc/bad/bitfieldwneg.c
/*
 * Bitfield 'bf1' width is negative.
 */

struct s {
	char bf1 : -1;
};
